jaeger-opentelemetry-tracing/Dockerfiles/config/envoy-proxy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            provider:
              name: envoy.tracers.dynamic_ot
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.DynamicOtConfig
                library: /usr/local/lib/libjaegertracing_plugin.so
                config:
                  service_name: frontend-proxy
                  sampler:
                    type: const
                    param: 1
                  reporter:
                    localAgentHostPort: jaeger:6831
                  headers:
                    jaegerDebugHeader: jaeger-debug-id
                    jaegerBaggageHeader: jaeger-baggage
                    traceBaggageHeaderPrefix: uberctx-
                  baggage_restrictions:
                    denyBaggageOnInitializationFailure: false
                    hostPort: ""
          codec_type: AUTO
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/films"
                route:
                  cluster: film-service-cluster
                decorator:
                  operation: operationFilms
              - match:
                  prefix: "/ratings"
                route:
                  cluster: rating-service-cluster
                decorator:
                  operation: operationRatings
              response_headers_to_add:
              - header:
                  key: "uber-trace-id"
                  value: "%REQ(uber-trace-id)%"
              - header:
                  key: "x-request-id"
                  value: "%REQ(x-request-id)%"
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: jaeger-cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jaeger-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
  - name: film-service-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: film-service-cl-name
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: film-service
                port_value: 5000
  - name: rating-service-cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: rating-service-cl-name
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rating-service
                port_value: 6000
